add config option to only close secure desktop with exit button this can be used for cases like Internet Explorer restarting itself in protected mode which we cannot reliably detect at the moment at which, without this option, closes the secure desktop instantly after opening it

--- a/SharkCage/CageConfigurator/CageConfiguratorForm.resx
+++ b/SharkCage/CageConfigurator/CageConfiguratorForm.resx
@@ -120,4 +120,15 @@
   <metadata name="menuStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <metadata name="restrictExitTooltip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>125, 17</value>
+  </metadata>
+  <data name="restrictExitButton.ToolTip" xml:space="preserve">
+    <value>Some applications spawn additional processes and may
+even close the original instance created inside the secure desktop.
+This creates problems with the detection mechanism on when to close
+the secure desktop.
+To avoid problems with the secure desktop closing unexpectedly
+check this box to only allow closing with the designated exit button.</value>
+  </data>
 </root>
